# astsee

./: .ci.yml  .eslintrc.js  .gitignore  Makefile  README.md  package.json  pyproject.toml
.ci-scripts/: test.sh
.github/workflows/: test-and-lint.yml  test-readme.yml
astsee/: __init__.py  basic_view.html.jinja  generic.html.jinja  generic_cli.py  global_cli.py  rich_view.html.jinja  rich_view.js  verilator.html.jinja  verilator.js  verilator_cli.py
tests/: .gitignore  conftest.py  deepnest.json  test_generic.py  test_verilator.py  testutils.py
tests/generic_golden/: test_diff_mixed_structures  test_diff_mixed_structures_basic  test_diff_with_dict_and_arrs_of_dicts  test_diff_with_dict_and_arrs_of_dicts_basic  test_diff_with_dict_and_arrs_of_dicts_html  test_diff_with_dict_and_arrs_of_dicts_html.html  test_pprint_mixed_structures  test_pprint_mixed_structures_basic  test_pprint_nested_empty_arr_basic  test_pprint_with_dict_and_arrs_of_dicts  test_pprint_with_dict_and_arrs_of_dicts_basic  test_pprint_with_dict_and_arrs_of_dicts_html  test_pprint_with_dict_and_arrs_of_dicts_html.html
tests/generic_in/: dict_with_one_scalar.json  mixed_structures_a.json  mixed_structures_b.json  with_dict_and_arrs_of_dicts_a.json  with_dict_and_arrs_of_dicts_b.json
tests/verilator_golden/: test_diff_change_root_type  test_diff_html_nodelist_replaced_with_scalar  test_diff_html_nodelist_replaced_with_scalar.html  test_diff_nodelist_replaced_with_scalar  test_html_timeline_diff.html  test_html_timeline_full.html  test_pprint_dict_with_one_scalar  test_tree_diff  test_tree_diff_filter  test_tree_diff_filter2  test_tree_diff_filter_no_meta  test_tree_diff_html  test_tree_diff_html.html  test_tree_diff_html_filter_no_meta  test_tree_diff_html_filter_no_meta.html  test_tree_diff_html_light  test_tree_diff_html_light.html  test_tree_diff_skip_nodes  test_tree_pprint  test_tree_pprint_html  test_tree_pprint_html.html
tests/verilator_in/: <verilated_std>  dict_with_one_scalar.json  empty_arr.json  empty_dict.json  nested_empty_arr.json  small_arr.json  small_dict.json  test.sv  test1.sv  test1.tree.meta.json  test1_a.tree.json  test1_b.tree.json  test_a.tree.json  test_b.tree.json
tests/verilator_in/nodelist_replaced_with_scalar/: a.json  b.json
tests/verilator_in/test1/: test1.sv
tests/verilator_in/test1/test1_submodule/: full_adder.sv
tests/verilator_in/test1_obj_dir/: Vtest1_001_cells.tree.json  Vtest1_006_linkjump.tree.json  Vtest1_009_linkdotparam.tree.json
