[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astsee"
version = "0.1.0"
authors = [{ name="Antmicro", email="contact@antmicro.com" }]
license = { file = "Apache-2.0" }
description = "Suite of tools for pretty printing, diffing, and exploring trees"
readme = "README.md"
dependencies = ["Jinja2 == 3.1.6", "pygments == 2.19.1", "multiprocess == 0.70.18"]
requires-python = ">=3.8"


[project.optional-dependencies]
dev = ["pytest", "tuttest @ git+https://github.com/antmicro/tuttest#egg=tuttest", "ruff==0.11.6", "isort==5.13.2", "pylint==3.2.7"]

[project.scripts]
astsee = "astsee.global_cli:main"
astsee_json = "astsee.generic_cli:main"
astsee_verilator = "astsee.verilator_cli:main"

[tool.setuptools]
packages = ["astsee"]

[tool.setuptools.package-data]
astsee = ["*.jinja", "*.js"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E701"]

[tool.yapf]
COLUMN_LIMIT = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = ["multiple-statements", "missing-function-docstring", "missing-module-docstring"]
good-names = ["f"]
